fix layout issue

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -468,8 +468,8 @@ input, select, textarea {
 				}
 
 		.row {
-			margin-top: -40px;
-			margin-left: -40px;
+			/*margin-top: -40px;
+			margin-left: -40px;*/
 		}
 
 			.row > * {
@@ -711,8 +711,8 @@ input, select, textarea {
 						}
 
 				.row {
-					margin-top: -40px;
-					margin-left: -40px;
+					/*margin-top: -40px;*/
+					/*margin-left: -40px;*/
 				}
 
 					.row > * {
